@@ -4,7 +4,10 @@
 
    <params>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+      <param name="OWNERLESS_SECTORS" default="true"/>
+      <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <param name="DEBUG" default="0"/>
+      <param name="debugchance" default="0"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    </params>
 
@@ -40,12 +43,20 @@
 
          <find_ship name="$_FoundAbandonedShips" space="player.galaxy" multiple="true">
             <match owner="faction.ownerless"/>
-            <match_use_blacklist object="$_Ship" type="blacklisttype.sectortravel" group="$blacklistgroup"/>
+            <match_use_blacklist object="$_Ship" type="blacklisttype.sectoractivity" group="$blacklistgroup"/>
          </find_ship>
 
          <!-- Workaround to get blacklists running for abandoned ships -->
          <do_for_each name="$_FoundAbandonedShip" in="$_FoundAbandonedShips" reverse="true">
-            <do_if value="$_FoundAbandonedShip.sector.isblacklisted.{blacklisttype.sectortravel}.{$blacklistgroup}.{$_Ship}">
+            <set_value name="$_NavBeacon" exact="null"/>
+            <find_object name="$_NavBeacon" space="$_FoundAbandonedShip.sector" multiple="false">
+               <match class="class.navbeacon"/>
+               <match owner="$_Ship.owner"/>
+               <match_distance object="$_FoundAbandonedShip" space="$_FoundAbandonedShip.sector" max="10km"/>
+            </find_object>
+            <do_if value="($_FoundAbandonedShip.sector.owner == faction.ownerless and not $OWNERLESS_SECTORS) or
+                          ($_FoundAbandonedShip.sector.isblacklisted.{blacklisttype.sectoractivity}.{$blacklistgroup}.{$_Ship}) or
+                          @$_NavBeacon != null">
                <remove_from_list name="$_FoundAbandonedShips" exact="$_FoundAbandonedShip"/>
             </do_if>
          </do_for_each>
@@ -57,17 +68,15 @@
             <save_retval name="_SortedList" variable="$_FoundAbandonedShips"/>
          </run_script>
 
-         <do_for_each name="$_FoundAbandonedShip" in="$_FoundAbandonedShips" reverse="true">
-            <set_value name="$_NavBeacon" exact="null"/>
-            <find_object name="$_NavBeacon" space="$_FoundAbandonedShip.sector" multiple="false">
-               <match class="class.navbeacon"/>
-               <match owner="$_Ship.owner"/>
-               <match_distance object="$_FoundAbandonedShip" space="$_FoundAbandonedShip.sector" max="10km"/>
-            </find_object>
-            <do_if value="@$_NavBeacon != null">
-               <remove_from_list name="$_FoundAbandonedShips" exact="$_FoundAbandonedShip"/>
-            </do_if>
-         </do_for_each>
+         <do_if value="$DEBUG gt 0">
+            <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~'"/>
+            <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'$_FoundAbandonedShips.count: %1'.[$_FoundAbandonedShips.count]"/>
+            <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~'"/>
+            <do_for_each name="$_FoundObject" in="$_FoundObjects">
+               <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'$_FoundAbandonedShip: %1 [%2] ~ Sector: %3 [%4]'.[$_FoundAbandonedShip.knownname, $_FoundAbandonedShip.idcode, $_FoundAbandonedShip.sector.knownname, $_FoundAbandonedShip.sector.owner]"/>
+            </do_for_each>
+            <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n'"/>
+         </do_if>
 
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
