@@ -4,5 +4,6 @@ v2.0.0 -- Current Published Version
 ~ Initial re-release
 
 v2.0.1 -- Current Development Version
+~ Added: A option to ignore ownerless sectors.
 ~ Added: Option to enable/disable notifications and logging in logbook.
-~ Updated: Some minor improvements.
+~ Updated: Some minor code and translation changes.
